      users should consider installing \pkg{Matrix} versions 1.7-z
      instead.

      \item The formal argument list of generic function
      \code{forceSymmetric} is changed from \code{(x, uplo)} to
      \code{(x, \dots)}, allowing methods to accept further arguments.
      The generic function now dispatches only on \code{x}.

      \item The formal argument lists of generic functions
      \code{symmpart} and \code{skewpart} are changed from \code{(x)} to
      \code{(x, \dots)}.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item Generic function \code{ct} for the conjugate transpose.
      \code{ct(x)} is equivalent to \code{t(x)} except for complex
      \code{x}, where it is intended to be more efficient than
      \code{Conj(t(x))} at least for \code{x} inheriting from virtual
      class \code{Matrix}.

      \item Methods for generic functions \code{isSymmetric},
      \code{forceSymmetric}, \code{symmpart}, and \code{skewpart}
      gain argument \code{trans} to support Hermitian and symmetric
      modes for complex matrices.

      \item Methods for generic function \code{symmpart} gain argument
      \code{uplo} for control over the \code{uplo} slot of the result
      of \code{symmpart(<generalMatrix>)}.

      \item \code{sort(x, \dots)} works for \code{x} inheriting from
      virtual class \code{Matrix} or virtual class \code{sparseVector}.
      It is possible now that \code{sort} is an implicit generic
      function in package \pkg{methods}.

      \item A method is defined for \code{kappa(z, \dots)} for
      \code{z} inheriting from virtual class \code{Matrix}.  It
      computes the reciprocal of \code{rcond(z, \dots)} and thus
      supports all of the optional arguments of methods for
      \code{rcond}.  Hence, in \pkg{Matrix} (unlike in \pkg{base}),
      \code{kappa} and \code{rcond} have \dQuote{consistent}
      interfaces.

      \item Methods for \code{rcond} gain arguments \code{exact},