@@ -3,19 +3,20 @@
 
 for (.cl in c("matrix", "denseMatrix"))
 setMethod("isDiagonal", c(object = .cl),
-          function(object)
+          function(object, ...)
               .Call(R_dense_is_diagonal, object))
 
 for (.cl in paste0(c("C", "R", "T"), "sparseMatrix"))
 setMethod("isDiagonal", c(object = .cl),
-          function(object)
+          function(object, ...)
               .Call(R_sparse_is_diagonal, object))
 
 setMethod("isDiagonal", c(object = "diagonalMatrix"),
-          function(object) TRUE)
+          function(object, ...)
+              TRUE)
 
 setMethod("isDiagonal", c(object = "indMatrix"),
-          function(object) {
+          function(object, ...) {
               d <- object@Dim
               if ((n <- d[2L]) != d[1L])
                   return(FALSE)
